tests/lang/compile_fail/duplicate_alias.kojs
alias HTTP.Headers
alias JSON.Encoder as Headers

"unreachable".print()
